# rustiplan

./: Cargo.toml  Dioxus.toml  README.md
public/: styling.css
public/assets/: style.css
src/: main.rs
src/assets/: styling.css
src/components/: cell.rs  cellindicator.rs  formulabar.rs  mod.rs  sheet.rs
src/formula/: ast.rs  interpret.rs  mod.rs  parser.rs
