[package]
name = "rustiplan"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.0"
fermi = "0.4.0"
lazy_static = "1.4.0"
pest = "2.7.2"
pest_derive = "2.7.2"
log = "0.4.19"
